<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="logo">DODORO LOGO</string>
    <string name="slogan">DODORO LOGO</string>
    <string name="logoLayout">DODORO LOGO</string>
    <string name="label_tblNum">Choose a table number:</string>
    <string name="label_perNum">The number of persons:</string>
    <string name="title_activity_new_table">Dodoro</string>
    <string name="label_language">language</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_categories">{fa_list} Menu</string>
    <string name="label_password">{fa_cog} Configuration</string>
    <string name="title_password">Waiter Password</string>
    <string name="title_activity_setting">Setting</string>
    <string name="mes_password_wrong">Password is not correct.</string>
    <string name="head_introduction">{fa_info_circle} Informations</string>
    <string name="head_lang">{fa_globe} Language</string>
    <string name="head_historical">{fa_history} Ordered historical</string>
    <string name="setting_activity_title">Setting Page</string>
    <string name="setting_activity_change_table">换桌</string>
    <string name="setting_activity_checkout">清空此台（结账）</string>
    <string name="setting_activity_checkout_msg">确认清台 （结账）?</string>
    <string name="setting_activity_checkout_ok">清台（结账）成功</string>
    <string name="setting_activity_printOrders">打印结账单</string>
    <string name="setting_activity_printOrders_mes">Orders has been printed.</string>
    <string name="setting_activity_printOrders_err_mes">Printe Error.</string>
    <string name="setting_activity_finishOrder">结束点单</string>
    <string name="setting_activity_finishOrder_msg">确定结束点单 ?</string>
    <string name="setting_activity_change_server_address">服务器地址变更</string>
    <string name="_ok">OK</string>
    <string name="_cancel">Cancel</string>
    <string name="btn_order_ok">Send {fa_arrow_circle_o_right} </string>
    <string name="btn_take_orders">Send</string>
    <string name="err_take_orders">There is an error when taking orders.</string>
    <string name="msg_take_orders">Confirm taking orders?</string>
    <string name="_yes">Yes</string>
    <string name="_no">No</string>
    <string name="lbl_table_no">Table Number: T-</string>
    <string name="err_server_error">Server Error</string>
    <string name="err_pos_error">POS Printer Error</string>
    <string name="lbl_table_activity_title_change_table">换桌</string>
    <string name="lbl_table_activity_title_choose_table">选桌</string>
    <string name="lbl_total">Total: </string>
    <string name="lbl_price">price: </string>
    <string name="lbl_subtotal">subtotal: </string>
    <string name="lbl_count">qty: </string>
    <string name="introduction">(EN)</string>
    <string name="label_ellipsis">Show Details</string>
    <string name="label_restart_app">Restart Pad app</string>
    <string name="err_other_error">Unknow Error</string>
    <string name="label_discount">Discount</string>
    <string name="label_discount_detail">0 表示免单，空表示无折扣。</string>
    <string name="lbl_discount_free">Free</string>
    <string name="lbl_discount_price">Discount Price: </string>
    <string name="lbl_discount">Discount: </string>
    <string name="setting_activity_changeDiscount_mes">Discount has been set.</string>
    <string name="setting_activity_changeDiscount">Change Discount</string>
    <string name="lbl_eur"> €</string>
    <string name="lbl_desc">Description: </string>
    <string name="lbl_server_address">Server address</string>
    <string name="lbl_takeaway">Takeaway</string>
    <string name="takeaway_activity_memo_empty_mes">不能为空.</string>
    <string name="lbl_takeaway_no">Takeaway Number: O-</string>
    <string name="btn_takeaway">取走</string>
    <string name="lbl_status">状态: </string>
    <string name="setting_activity_uncheckout">请先结账</string>
    <string name="setting_activity_uncheckout_msg">还未结账，不能取走外卖。\n是否结账并取走外卖？</string>
    <string name="setting_activity_takeaway">取走外卖</string>
    <string name="setting_activity_takeaway_msg">取走外卖？</string>
    <string name="setting_activity_takeaway_ok">取走成功</string>
    <string name="btn_remove_takeaway">取消外卖</string>
    <string name="setting_activity_remove_takeaway">取消外卖</string>
    <string name="setting_activity_remove_takeaway_msg">取消外卖？</string>
    <string name="setting_activity_remove_takeaway_ok">取消成功</string>
    <string name="lbl_discount_no">No Discount</string>
    <string name="lbl_new_takeaway">New Takeaway</string>
    <string name="lbl_memo">Remark</string>
	<string name="lbl_rounds">Number of round: %1$s / %2$s</string>
	<string name="ttl_round_out">%1$s轮已结束</string>
	<string name="lbl_round_out">%1$s轮已结束</string>
	<string name="lbl_no_order">No dish was chosen.</string>
	<string name="lbl_round_interval">上一轮间隔不足%1$s 分钟，不能开始下一轮。</string>
	<string name="lbl_round">Round %1$s</string>
	<string name="ttl_round_order_count">Number of dish to choose</string>
	<string name="lbl_round_order_count">Count of dish: %1$s / ( Max. %2$s items )</string>
	<string name="err_round_order_count">Exceeding the maximum number for each round</string>
	<string name="btn_subtract">{fa_minus}</string>
	<string name="btn_add">{fa_plus}</string>
	<string name="lbl_round_interval_left">%1$s秒</string>
	<string name="setting_activity_change_round_order_count">修改每轮点餐餐食数</string>
	<string name="msg_round_order_count">table: %1$s, Count per Round: %2$s</string>
	 
	
	
</resources>